feat: chat onboarding flow + ChromaDB knowledge base seeding
- Add 6-step onboarding questionnaire (name, college, branch, year, hostel, interests)
- Save student profile to backend for personalized AI responses
- Add GET/POST /chat/profile endpoints
- Pass student profile to Gemini prompt for context-aware answers
- Add seed-knowledge.ts script to populate ChromaDB from dataset.json
- Add always-visible suggestion bar with 12 common campus questions
- Fix chat scroll issues (min-h-0, shrink-0, overflow-hidden)
- Fix sources rendering (handle object sources from backend)

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint src --ext .ts",
     "db:migrate": "tsx -r dotenv/config src/db/migrate.ts",
     "db:seed": "tsx -r dotenv/config src/db/seed.ts",
+    "seed:knowledge": "tsx src/db/seed-knowledge.ts",
     "db:setup-storage": "tsx -r dotenv/config src/db/setup-storage.ts",
     "check-env": "tsx -r dotenv/config src/check-env.ts"
   },
