--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,29 +1,36 @@
 # Server Configuration
 NODE_ENV=development
-PORT=3001
-API_BASE_URL=http://localhost:3001
+PORT=3002
+API_BASE_URL=http://localhost:3002
 
 # Database - Supabase PostgreSQL
-SUPABASE_URL=your_supabase_project_url
-SUPABASE_ANON_KEY=your_supabase_anon_key
-SUPABASE_SERVICE_KEY=your_supabase_service_role_key
-DATABASE_URL=postgresql://user:password@host:5432/pal_db
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=your_supabase_anon_key_here
+SUPABASE_SERVICE_KEY=your_supabase_service_key_here
+DATABASE_URL=postgresql://postgres:your_password@db.your-project.supabase.co:5432/postgres
 
 # Redis Configuration
-REDIS_URL=redis://localhost:6379
-REDIS_PASSWORD=
+REDIS_URL=redis://:your_redis_password@your-redis-host:port
+REDIS_PASSWORD=your_redis_password_here
 
 # Google AI Configuration
-GOOGLE_API_KEY=your_google_gemini_api_key
-GOOGLE_CLOUD_PROJECT_ID=your_gcp_project_id
+GOOGLE_API_KEY=your_google_api_key_here
+GOOGLE_CLOUD_PROJECT_ID=your_google_cloud_project_id
+
+# Uploadthing Configuration
+UPLOADTHING_TOKEN=your_uploadthing_token_here
+UPLOADTHING_SECRET=your_uploadthing_secret_here
+UPLOADTHING_APP_ID=your_uploadthing_app_id
 
 # ChromaDB Configuration
-CHROMA_HOST=localhost
-CHROMA_PORT=8000
+CHROMA_HOST=api.trychroma.com
+CHROMA_API_KEY=your_chroma_api_key_here
+CHROMA_TENANT=your_chroma_tenant_id
+CHROMA_DATABASE=PALDB
 CHROMA_COLLECTION_NAME=pal_knowledge_base
 
 # JWT Configuration
-JWT_SECRET=your_jwt_secret_key_change_in_production
+JWT_SECRET=your_super_secure_random_jwt_secret_key_here
 JWT_EXPIRES_IN=7d
 
 # Twilio Configuration (WhatsApp)
@@ -41,3 +48,12 @@ RATE_LIMIT_MAX_REQUESTS=100
 
 # Logging
 LOG_LEVEL=info
+
+# Gemini API (for AI features)
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# Document Storage
+DOCUMENT_STORAGE_PATH=./storage/documents
+
+# Frontend URL
+FRONTEND_URL=http://localhost:3000
